@@ -1,3 +1,4 @@
+- added i?without()
 - more and better docs
 
 0.5.1
